--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             Покемоны с <a href="https://pokeapi.co/" class="text-blue-500 font-ultrabold">Pokeapi</a>
         </h1>
 
-        <div class="flex w-max mx-auto mt-12">
-            <button class="bg-blue-500 hover:bg-blue-600 active:bg-blue-300 disabled:bg-gray-400
+        <div class="flex sm:w-max mx-auto mt-12 sm:flex-nowrap sm:flex-row flex-col flex-wrap justify-center items-center ">
+            <button class="bg-blue-500 mb-2 w-max hover:bg-blue-600 active:bg-blue-300 disabled:bg-gray-400
                        text-white font-bold 
                        py-2 px-4 rounded-full 
                        transition-all duration-200 ease-in-out
@@ -27,7 +27,7 @@
                 Новые покемоны
             </button>
 
-            <button class="bg-pink-500 hover:bg-pink-600 active:bg-pink-300 disabled:bg-gray-400
+            <button class="bg-pink-500 mb-2 w-max hover:bg-pink-600 active:bg-pink-300 disabled:bg-gray-400
                        text-white font-bold 
                        py-2 px-4 rounded-full 
                        transition-all duration-200 ease-in-out
@@ -41,7 +41,11 @@
             </button>
         </div>
         
-        <div class="flex w-full mt-10">
+        <div class="flex w-full mt-10 px-5 md:px-0
+                    md:relative fixed md:top-0 bottom-0 left-0 border-t-2 border-blue-300
+                    md:bg-none mb:p-0 md:justify-start
+                    bg-gray-50 p-2 justify-center"
+            x-show="pokemons.length">
             <div class="pr-4 py-1 font-medium">
                 Сортировка
             </div>
@@ -73,9 +77,10 @@
 
         <div class="mt-20 h-20">
             <div x-show="!pokemons.length" class="text-3xl font-bold text-center pt-20">Попробуй нажать на <span class="text-pink-500">кнопочки</span>!</div>
-            <div class="flex flex-wrap -mx-5" id="pokemons-list">
+            <div class="flex flex-wrap -mx-5 mx-auto md:items-start items-center w-full justify-center
+                        md:flex-row flex-col" id="pokemons-list">
                 <template x-for="(pokemon, index) in pokemons" :key="index">
-                    <div class="flex flex-col w-1/5 mb-8 px-5 min-h-full">
+                    <div class="flex flex-col xl:w-1/5 lg:w-1/4 md:w-1/3 w-[90%] min-h-full mb-8 md:px-5 mx-0 mx-auto">
                         <div class="border-2 border-blue-500 rounded-xl h-full">
                             <img class="my-10 mx-auto w-20 h-20" :src="pokemon.image" alt="">
                             <div class="px-8 pb-8">
